# penny

./: .flake8  .pre-commit-config.yaml  Pipfile  bot.py  commands.py  generate.py  handlers.py  license.txt  prompt.py  pyproject.toml  readme.md
cogs/: __init__.py  chat.py  imagine.py
